# samsa

./: .gitignore  CHANGELOG.md  Cargo.toml  DockerCompose.README.md  Makefile  README.md  docker-compose-kafka-kraft.yaml  docker-compose-kafka-zookeeper.yaml  docker-compose.yaml  rust-toolchain.toml  varint.py
.github/workflows/: release.yml  rust.yml
benches/: consumer.rs  encoder.rs  parser.rs  producer.rs
etc/redpanda/: .bootstrap.yaml
examples/: consumer.rs  consumer_group.rs  consumer_group_custom_client.rs  consumer_group_without_builder.rs  fetch.rs  metadata.rs  producer.rs  sasl.rs  sasl_tls.rs  tls.rs  tls2.rs  tls_consume.rs  tls_produce.rs
src/: admin.rs  assignor.rs  consumer.rs  consumer_builder.rs  consumer_group.rs  consumer_group_builder.rs  encode.rs  error.rs  lib.rs  metadata.rs  network.rs  parser.rs  producer.rs  producer_builder.rs  utils.rs
src/network/: mod.rs  sasl.rs  tcp.rs  tls.rs
src/protocol/: mod.rs
src/protocol/commit_offset/: mod.rs  request.rs  response.rs
src/protocol/create_topics/: mod.rs  request.rs  response.rs
src/protocol/delete_topics/: mod.rs  request.rs  response.rs
src/protocol/fetch/: mod.rs  request.rs  response.rs  response_optimized.rs
src/protocol/find_coordinator/: mod.rs  request.rs  response.rs
src/protocol/heartbeat/: mod.rs  request.rs  response.rs
src/protocol/join_group/: mod.rs  request.rs  response.rs
src/protocol/leave_group/: mod.rs  request.rs  response.rs
src/protocol/list_offsets/: mod.rs  request.rs  response.rs
src/protocol/metadata/: mod.rs  request.rs  response.rs
src/protocol/offset_fetch/: mod.rs  request.rs  response.rs
src/protocol/produce/: mod.rs  request.rs  response.rs
src/protocol/sasl_authenticate/: request.rs  response.rs
src/protocol/sasl_handshake/: request.rs  response.rs
src/protocol/sync_group/: mod.rs  request.rs  response.rs
src/redpanda/: mod.rs
src/redpanda/adminapi/: builder.rs  environment_variable.rs  mod.rs  node_config.rs  partition.rs  partition_transform_status.rs  transform.rs  transform_metadata.rs
testdata/: add_one.wasm  redpanda-identity.wasm
tests/: compression_setup.rs  consumer_builder.rs  consumer_group_builder.rs  create_delete_topic.rs  do_until_success.sh  group.rs  metadata.rs  multi_partitions_setup.rs  offset.rs  produce_fetch.rs  redpanda_adminapi_get_leader_id.rs  redpanda_adminapi_transform.rs  run-all-tests.sh  testsupport.rs  write_and_read_1M_messages.rs  write_and_read_1m_messages.rs  write_and_read_1m_messages_with_multi_partitions_and_compression.rs
tests/testsupport/: mod.rs
