[package]
name = "samsa"
version = "0.1.1"
edition = "2021"
description = "Rust-native Kafka/Redpanda protocol and client implementation."
license-file = "LICENSE"
homepage = "https://github.com/CallistoLabsNYC/samsa"
repository = "https://github.com/CallistoLabsNYC/samsa"
readme = "README.md"
keywords = ["kafka", "redpanda", "confluent"]
categories = ["api-bindings"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.5"
bytes = { version = "1.5.0" }
crc = "3.0.1"
futures = "0.3.30"
nom = "7.1.3"
nombytes = "0.1.1"
num-derive = "0.4.2"
num-traits = "0.2.18"
tokio = { version = "1.36.0", features = ['full'] }
tokio-stream = "0.1.14"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "parser"
harness = false

[[bench]]
name = "encoder"
harness = false

[features]
integration_tests = []
