[package]
name = "samsa"
version = "0.1.4"
edition = "2021"
description = "Rust-native Kafka/Redpanda protocol and client implementation."
license-file = "LICENSE"
homepage = "https://github.com/CallistoLabsNYC/samsa"
repository = "https://github.com/CallistoLabsNYC/samsa"
readme = "README.md"
keywords = ["kafka", "redpanda", "confluent"]
categories = ["api-bindings"]

[dependencies]
argh = "0.1.12"
async-stream = "0.3.5"
bytes = { version = "1.5.0" }
crc = "3.0.1"
flate2 = "1.0.28"
futures = "0.3.30"
nom = "7.1.3"
nombytes = "0.1.1"
num-derive = "0.4.2"
num-traits = "0.2.18"
reqwest = { version = "0.11", features=['json'], optional = true }
rustls-pemfile = { version = "2.1.2", optional = true }
rustls-pki-types = { version = "1.4.1", optional = true }
serde = { version = "1.0.193", optional = true }
serde_derive = { version = "1.0.193", optional = true }
serde_json = "1.0.108"
tokio = { version = "1.36.0", features = ['full'] }
tokio-rustls = { version = "0.26.0", optional = true }
tokio-stream = "0.1.14"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
webpki-roots = { version = "0.26.1", optional = true }

[dev-dependencies]
criterion = "0.3"
random_word = { version = "0.4.3", features = ["en"] }

[[bench]]
name = "parser"
harness = false

[[bench]]
name = "encoder"
harness = false

[features]
tls = ["rustls-pemfile", "rustls-pki-types", "tokio-rustls", "webpki-roots"]
integration_tests = []
redpanda = ["reqwest", "serde", "serde_derive"]
