[package]
name = "samsa"
version = "0.1.8"
edition = "2021"
description = "Rust-native Kafka/Redpanda protocol and client implementation."
license-file = "LICENSE"
homepage = "https://github.com/CallistoLabsNYC/samsa"
repository = "https://github.com/CallistoLabsNYC/samsa"
readme = "README.md"
keywords = ["kafka", "redpanda", "confluent"]
categories = ["api-bindings"]

[dependencies]
async-stream = "0.3.5"
async-trait = "0.1.80"
bytes = { version = "1.5.0" }
crc = "3.0.1"
flate2 = "1.0.28"
futures = "0.3.30"
lz4_flex = "0.11.3"
snap = "1.1.0"
ruzstd = "0.8.1"
nom = "7.1.3"
nombytes = "0.1.1"
num-derive = "0.4.2"
num-traits = "0.2.18"
reqwest = { version = "0.11", features=['json'], optional = true }
rsasl = { version = "2.0.2", default-features = false, features = ["config_builder", "provider", "login", "plain", "scram-sha-1", "scram-sha-2"]}
rustls-pemfile = "2.1.2"
rustls-pki-types = "1.4.1"
serde = { version = "1.0.193", optional = true }
serde_derive = { version = "1.0.193", optional = true }
serde_json = "1.0.108"
tokio = { version = "1.36.0", features = ['full'] }
tokio-rustls = "0.26.0"
tokio-stream = "0.1.14"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
webpki-roots = "0.26.1"
rand = "0.8.5"

[dev-dependencies]
criterion = {version = "0.3", features = ["async_tokio"]}
random_word = { version = "0.4.3", features = ["en"] }

[[bench]]
name = "parser"
harness = false

[[bench]]
name = "encoder"
harness = false

[[bench]]
name = "consumer"
harness = false

[[bench]]
name = "producer"
harness = false

[features]
integration_tests = []
redpanda = ["reqwest", "serde", "serde_derive"]
